서버 프로젝트 셋업: 데이터베이스 연결

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ NEXT_PUBLIC_KAKAOMAP_JS_KEY=b1e093a79b0462697357a22065985ff3
 
 # 카카오 디벨로퍼스에서 복사한 REST API 키
 KAKAO_REST_API_KEY=92f1a43539bd8c0acfe24beada269e92
+
+/src/generated/prisma
