--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "postcss": "^8.5.6",
+    "prisma": "^6.15.0",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
