--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "14.2.3",
+    "next-pwa": "^5.6.0",
     "postcss": "^8.5.6",
     "prisma": "^6.16.1",
     "tw-animate-css": "^1.3.7",
