--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.2.0",
     "sharp": "^0.34.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "zustand": "^5.0.8"
