--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18.2.0",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.2.0",
+    "recharts": "^2.15.4",
     "sharp": "^0.34.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
