--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "npx next start",
     "lint": "eslint"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.2",
@@ -59,6 +62,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8.5.6",
     "prisma": "^6.16.1",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.9.3"
   }
