--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "npx next dev",
-    "build": "npx prisma generate && npx next build",
+    "build": "npx prisma generate && npx next build && tsc prisma/seed.ts --module CommonJS --outDir dist",
     "start": "npx next start",
     "lint": "eslint"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "node dist/prisma/seed.js"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
