--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "npx next dev",
-    "build": "npx prisma generate && npx next build && tsc prisma/seed.ts --module CommonJS --outDir dist",
+    "build": "npx prisma generate && npx next build && tsc --project prisma/tsconfig.seed.json",
     "start": "npx next start",
     "lint": "eslint"
   },
