--- a/prisma/tsconfig.seed.json
+++ b/prisma/tsconfig.seed.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "module": "CommonJS",
+    "moduleResolution": "node",
     "noEmit": false,
     "outDir": "../dist"
   },
