--- a/prisma/tsconfig.seed.json
+++ b/prisma/tsconfig.seed.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "module": "CommonJS",
     "moduleResolution": "node",
+    "isolatedModules": false,
     "noEmit": false,
     "outDir": "../dist"
   },
