API이관 2단계: 지도 구글로 변경

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/google.maps": "^3.58.1",
     "@types/navermaps": "^3.9.1",
     "@types/node": "^24.6.2",
     "@types/react": "^18.2.0",
