마이그레이션 2단계 완료: 지도관련 버튼 위치조정, 검색바 기능 복구

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "seed": "node dist/prisma/seed.js"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.42",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-accordion": "^1.2.12",
