--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.553.0",
     "next": "^14.2.3",
