--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
+    "react-confetti": "^6.4.0",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.2.0",
     "recharts": "^2.15.4",
